tests/NormalTests/paczka1/fuzzy1/81462217.err
Error in line 1: XXO A841 68,4
Error in line 4: PURBtjRso S,,, 3,,9
Error in line 7: PURBtjRso S222 161,2
Error in line 12: PURBtjRso S586 22,4
Error in line 18: n3Pt A961 27,5
Error in line 21: n3Pt S222 8,9
Error in line 34: A841 S222 34,2
